--- a/app/src/main/res/layout/event_card_view.xml
+++ b/app/src/main/res/layout/event_card_view.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="10dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/event_button">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
